--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -1,5 +1,25 @@
 {
   "MainPage": {
-    "title": "Hello World"
+    "miniText": "Инновационное решение для ваших веб-сайтов.",
+    "paragraph": "Наши инновационные подходы позволяют создавать уникальные и эффективные веб-сайты, адаптированные под ваши нужды. Мы используем передовые технологии, обеспечивая быстрый, безопасный и удобный пользовательский опыт. С нашими решениями ваш веб-сайт будет выделяться среди конкурентов и привлекать больше посетителей.",
+    "login": "Войти",
+    "documentation": "Документация"
+  },
+  "LoginPage": {
+    "heading": "Войти",
+    "password": "Пароль",
+    "forgot_password": "Забыли ваш",
+    "forgot_password_orange": "пароль?",
+    "dont_have_account": "Еще нет аккаунта?",
+    "create_account": "Создать аккаунт"
+  },
+  "RegistrationPage": {
+    "heading": "Добро пожаловать",
+    "username": "Имя пользователя",
+    "password": "Пароль",
+    "password_confirm": "Подтвердить пароль",
+    "sign_up": "Зарегистрироваться",
+    "account": "Уже есть аккаунт?",
+    "login": "Войти"
   }
 }
