--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -21,5 +21,8 @@
     "sign_up": "Sign Up",
     "account": "Already have an account?",
     "login": "Login"
+  },
+  "Website": {
+    "websites": "Websites"
   }
 }
