--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -21,5 +21,8 @@
     "sign_up": "Зарегистрироваться",
     "account": "Уже есть аккаунт?",
     "login": "Войти"
+  },
+  "Website": {
+    "websites": "Веб-сайты"
   }
 }
