--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -41,5 +41,12 @@
     "create_website": "Create website",
     "upload_website": "Upload website",
     "empty": "You don't have any websites"
+  },
+  "Search": {
+    "search": "Search"
+  },
+  "Requests": {
+    "requests": "Requests",
+    "delete": "Delete"
   }
 }
