--FORM TABS ADDED

--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -47,6 +47,7 @@
   },
   "Requests": {
     "requests": "Requests",
-    "delete": "Delete"
+    "delete": "Delete",
+    "empty": "You don't have any requests"
   }
 }
