--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -47,6 +47,7 @@
   },
   "Requests": {
     "requests": "Заявки",
-    "delete": "Удалить"
+    "delete": "Удалить",
+    "empty": "У вас пока нет заявок"
   }
 }
