--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -23,7 +23,8 @@
     "login": "Войти"
   },
   "Website": {
-    "websites": "Веб-сайты"
+    "websites": "Веб-сайты",
+    "requests": "Заявки"
   },
   "Menu": {
     "websites": "Мои сайты",
@@ -49,5 +50,8 @@
     "requests": "Заявки",
     "delete": "Удалить",
     "empty": "У вас пока нет заявок"
+  },
+  "Editor": {
+    "editor": "Редактор Текста"
   }
 }
