--WEBSITE TABS UPDATED

--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -76,5 +76,8 @@
       "title": "Доступ",
       "description": "Управляйте настройками доступа, параметрами безопасности и настройте многофакторную аутентификацию."
     }
+  },
+  "WebsiteTab": {
+    "edit": "Редактировать сайт"
   }
 }
