--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -76,5 +76,8 @@
       "title": "Access",
       "description": "Control access settings, manage security options, and set up multi-factor authentication."
     }
+  },
+  "WebsiteTab": {
+    "edit": "Edit Website"
   }
 }
