--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -3,7 +3,25 @@
     "miniText": "Инновационное решение для ваших веб-сайтов.",
     "paragraph": "Наши инновационные подходы позволяют создавать уникальные и эффективные веб-сайты, адаптированные под ваши нужды. Мы используем передовые технологии, обеспечивая быстрый, безопасный и удобный пользовательский опыт. С нашими решениями ваш веб-сайт будет выделяться среди конкурентов и привлекать больше посетителей.",
     "login": "Войти",
-    "documentation": "Документация"
+    "documentation": "Документация",
+    "cards": {
+      "card_first": {
+        "name": "Удобство",
+        "description": "Управляйте вашими задачами и проектами с максимальным комфортом и удобством."
+      },
+      "card_second": {
+        "name": "Эффективность",
+        "description": "Оптимизируйте свои рабочие процессы и достигайте целей быстрее."
+      },
+      "card_third": {
+        "name": "Надежность",
+        "description": "Доверьтесь нашему инструменту для стабильного и надежного управления проектами."
+      }
+    },
+    "about": {
+      "heading": "Что такое Spark Admin?",
+      "under_heading": "Откройте силу эффективного менеджмента."
+    }
   },
   "LoginPage": {
     "heading": "Войти",
