--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -23,6 +23,21 @@
       "under_heading": "Откройте силу эффективного менеджмента."
     }
   },
+  "Popups": {
+    "website": {
+      "text": "Добавьте веб-сайт",
+      "name": "Имя сайта",
+      "url": "URL вашего сайта"
+    },
+    "code": {
+      "text": "Получите ваш код для верификации",
+      "url": "URL вашего сайта",
+      "get_code": "Получить код",
+      "loading": "Загрузка...",
+      "check_code": "Проверить код",
+      "close": "Закрыть"
+    }
+  },
   "LoginPage": {
     "heading": "Войти",
     "password": "Пароль",
