--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -68,6 +68,11 @@
     "settings": "Настройки",
     "logout": "Выйти"
   },
+  "Users": {
+    "heading": "Управление пользователями",
+    "add_user": "Добавить пользователя",
+    "no_users": "У вас еще нет пользователей"
+  },
   "Dashboard": {
     "websites": "Ваши Сайты",
     "add_website": "Добавить сайт",
