--ZIP UPLOADING ALMOST WORKING

--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -36,6 +36,11 @@
       "loading": "Loading...",
       "check_code": "Check code",
       "close": "Close"
+    },
+    "upload": {
+      "upload": "Upload Website",
+      "your_build": "Your Build",
+      "button": "Upload"
     }
   },
   "LoginPage": {
