--LOGO NAVIGATION ADDED

--- a/client/public/locales/en.json
+++ b/client/public/locales/en.json
@@ -94,6 +94,7 @@
   },
   "Users": {
     "heading": "Users",
+    "add_user": "Add User",
     "no_users": "You don't have any users"
   },
   "Support": {
