--- a/client/public/locales/ru.json
+++ b/client/public/locales/ru.json
@@ -97,6 +97,13 @@
   "Editor": {
     "editor": "Редактор Текста"
   },
+  "BuildWebsite": {
+    "heading": "Новая страница",
+    "landing": "Лэндинг",
+    "shop": "Магазин",
+    "blog": "Блог",
+    "Events": "Ивенты"
+  },
   "Support": {
     "support": "Поддержка",
     "Accounts": {
